Fix project wizard invisible textarea borders

--- a/grails-app/assets/stylesheets/app/layout.less
+++ b/grails-app/assets/stylesheets/app/layout.less
@@ -395,13 +395,11 @@ header {
           }
         }
         > .panel > [ui-view='details-tab'] {
-
           .chart {
             padding: 10px 10px 0;
             margin-bottom: 10px;
             border: 1px solid #e5e5e5;
           }
-
           form.form-editable:not(:hover):not(.form-editing), form:not(.form-editable) {
             .form-control {
               background: none;
@@ -409,6 +407,9 @@ header {
               cursor: text;
               box-shadow: none;
               resize: none;
+            }
+            .markitup-preview {
+              border-color: transparent;
             }
             .form-control.important {
               .well;
@@ -445,38 +446,26 @@ header {
               border-color: transparent;
             }
           }
-
           form.form-editable {
             .panel-footer {
               .responsive-invisibility();
             }
             &.form-editing {
-              .markitup-preview {
-                border-color: rgb(217, 217, 217);
-                border-top-color: rgb(192, 192, 192);
-              }
               .panel-footer {
                 .responsive-visibility();
               }
             }
           }
-
           form.form-editable:hover {
-            .markitup-preview {
-              border-color: rgb(217, 217, 217);
-              border-top-color: rgb(192, 192, 192);
-            }
             .input-group-addon {
               border-right: 0;
             }
           }
-
           form:not(.form-editable) {
             .panel-footer {
               .responsive-invisibility();
             }
           }
-
           form {
             .markitup-preview.important, .atwho-preview.important, textarea.important {
               .well;
@@ -484,7 +473,6 @@ header {
               background-color: @view-bg;
             }
           }
-
           .panel-footer {
             padding: 0;
             > div:first-child {
