--- a/grails-app/assets/stylesheets/app/styles.less
+++ b/grails-app/assets/stylesheets/app/styles.less
@@ -134,15 +134,16 @@ table {
     }
   }
   + .markitup-preview {
-    border:1px solid #fff;
     overflow: auto;
     min-height: @min-height-textarea;
     max-height: @max-height-textarea;
     background: @body-bg;
     color: #555;
+    border: 1px solid rgb(217, 217, 217);
+    border-top-color: rgb(192, 192, 192);
     &:hover {
-      border-color:rgb(217, 217, 217);
-      border-top-color:rgb(192, 192, 192);
+      border-color: rgb(217, 217, 217);
+      border-top-color: rgb(192, 192, 192);
     }
     &.placeholder {
       color: #999;
@@ -927,15 +928,6 @@ tbody.story-ghost {
   font-size: 2em;
   top: 1px;
 }
-
-.sticky-note-stack:after {
-  content:"\f24a";
-  position: absolute;
-  left: 7px;
-  font-size: 2em;
-  top: 1px;
-}
-
 
 .native-sticky {
   position: -webkit-sticky;
